2003-03-11  Theodore A. Roth  <troth@openavr.org>

	* windows/Makefile.am: Fix uninstall-local rule (forget the $$file
	part of the rm command).

2003-03-11  Theodore A. Roth  <troth@openavr.org>

	* AUTHORS: Updated.
	* CHANGELOG: Move contents to NEWS and remove file.
	* ChangeLog: All of the changes for this year.
	* ChangeLog-2001: All 2001 changes.
	* ChangeLog-2002: All 2002 changes.
	* Makefile.am (EXTRA_DIST): Remove CHANGELOG and and Change-200[12].
	* NEWS: Moved contents of CHANGELOG file here.
	* README: Add note pointing to savannah site.

2003-03-11  Eric Weddington <eric@umginc.net>

	* doc/avrdude.texi:
	Add Install and Documentation sections for Windows. Fix typo.

2003-03-10  Theodore A. Roth  <troth@openavr.org>

	* Makefile.am: * Makefile.am (EXTRA_DIST): Add CHANGELOG.

2003-03-10  Brian S. Dean  <bsd@bsdhome.com>

	* stk500.c: Disable debugging printf.

	* configure.ac: Update version number in preparation for release.

2003-03-10  Theodore A. Roth  <troth@openavr.org>

	* doc/avrdude.texi:
	Add comment before each node to make them stand out better.
	Use @option{} command for options instead of @code{}.
	Merge FreeBSD and Linux platform dependent information.

2003-03-10  Brian S. Dean  <bsd@bsdhome.com>

	* avrdude.1: Minor man page updates to better reflect reality.

2003-03-10  Joerg Wunsch <j@uriah.heep.sax.de>

	* bootstrap:
	Export all the AUTO* variables.  Hopefully, that way the generated
	Makefile might get them correctly.

	* bootstrap:
	Export ${AUTOCONF} so automake will find it by whatever name it will be
	called today.

2003-03-06  Eric Weddington <eric@umginc.net>

	* doc/avrdude.texi:
	Add notes about ability to list parts and list programmers in the
	config file in -p and -c descriptions. Change info about where to
	find Windows search method in -C description.

	* main.c:
	Change software version from hardcoded value to getting it from
	the configuration.

2003-03-06  Theodore A. Roth  <troth@openavr.org>
